<resources>
    <string name="app_name">Movement</string>
    <string name="facebook_app_id">1697295270349882</string>
    <string name="fb_login_protocol_scheme">fb1697295270349882</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_with_google">Sign in with Google</string>
    <string name="choose_your_activity">Choose your activity</string>
    <string name="running">Running</string>
    <string name="walking">Walking</string>
    <string name="cycling">Cycling</string>
    <string name="lets_move">Let\'s move!</string>
    <string name="news_feed">News Feed</string>
    <string name="navigation_menu">Navigation Menu</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="leader_board">Leader Board</string>
    <string name="help_center">Help Center</string>
    <string name="share">Share</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign out</string>
    <string name="title_activity_drawer">DrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="achievement_detail">Achievement of our movements</string>
    <string name="select_charity">Select charity</string>
    <string name="share_profile">Share profile</string>
    <string name="edit_profile">Edit profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
